--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,88 +1,59 @@
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">BETALABS</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Principal</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">EMPRESA</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
+  </nav>
 
-<header>
-  <nav  class = " navegação navbar-dark bg-primária navbar-expand-lg " >
-      <div  class = " container " >
-          <A  class = " navbar-brand "  href = " javascript :; "  th: href = " @ {/} " > Contatos </a >
+  <form #newUserForm="ngForm" (ngSubmit)="_registro.onSubmit(newUserForm)">
+    <div class="form-group">
+      <label for="nome">Nome Da Marca:</label>
+      <input type="text" class="form-control" id="nome" placeholder="NOME" name="name" [(ngModel)]="_registro.name">
+    </div>
+    <div class="form-group">
+      <label for="Price">Price:</label>
+      <input type="number" class="form-control" id="price" placeholder="R$" name="price" [(ngModel)]="_registro.price">
+    </div>
+    <div class="form-group">
+        <label for="sku">SKU:</label>
+        <input type="text" class="form-control" id="sku" placeholder="Model" name="sku" [(ngModel)]="_registro.sku">
+      </div>
+    <div class="form-group form-check">
+      <label class="form-check-label">
+        <input class="form-check-input" type="checkbox"> Remember me
+      </label>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
 
-          <button  class = " navbar-toggler "  tipo = " botão "  data-toggle = " colapso "
-              data-target = " #navbarSupportedContent "  aria-controls = " navbarSupportedContent "
-              aria-expanded = " false "  aria-label = " Navegação de alternância " >
-              <span  class = " navbar-toggler-icon "> </span >
-          </button >
-      </div >
-  </nav >
-</header >
-
-<main  role = " main " >
-  <section  class = " my-4 " >
-    <div  class = " container " >
-        <h2 > Cadastro de contatos </h2 >
-    </div >
-  </section >
-
-  <section >
-    <div  class = "container" >
-      <form  method = "post" # frm = "ngForm" (ngSubmit) = "criar (frm)" >
-        <div  class = "form-group " >
-          <label  for = "nome " > Nome </label >
-          <input  type = "text "  id = " nome "  nome = " nome "
-            class = "formulário-controle "  espaço reservado = " Nome "
-            [( ngModel )] = "contato.nome "  obrigatório />
-        </div >
-
-        <div  class = " form-group " >
-          <label  for = " price " > Price </label >
-          <input  type = " number "  id = " price "  name = " price "
-            class = " form-control "  placeholder = " R$ "
-            [( ngModel )] = " contato.price "  Price  />
-        </div >
-       
-        <div class="">
-            <label  for = " sku " > Sku </label >
-                 <input  type = " number "  id = " sku "  name = " sku "
-                      class = " form-control "  placeholder = " sku "
-                      [( ngModel )] = " contato.price "  Sku  />  
-
-        </div>
-
-        <tipo de botao  = " enviar " class = " btn btn-primary " 
-          [ disabled ] = " frm.invalid " > Salvar </button >
-      </form >
-    </div >
-  </section >
-
-  <section  class = " mt-5 " >
-    <div  class = " container " >
-      <div  class = " table-responsive " >
-        <table  class = " table-hover table-hover " >
-          <thead  class = " centro de texto com luz de propagação " >
-            <tr >
-              <th > Código </th >
-
-              <th  class = " w-50 " > Nome </th >
-
-              <th  class = " w-100" > Price </th >
-
-              <th  class = " w-100 " > Sku </th >
-
-            </tr >
-          </thead >
-
-          <tbody >
-            <tr * ngFor = " permite contato dos contatos " >
-              <td  class = " centro de texto w-25 " > {{contato.id}} </td >
-
-              <td > {{contato.nome}} </td >
-
-              <td > {{contato.price}} </td >
-
-              <td > {{contato.sku}} </td >  
-            </tr >
-          </tbody >
-        </table >
-      </div >
-    </div >
-  </section >
-</main >
-<!--<app-contatos-listagem></app-contatos-listagem>--> 
+  <div class="table-striped">
+  <table style="width:100%">
+      <tr>
+        <th>ID</th>
+        <th>Name</th> 
+        <th>Price</th>
+        <th>SKU</th>
+        <th>Deletar</th>
+      </tr>
+      
+      <tbody *ngFor = 'let lst of _registro.appList' >
+        <tr>
+          <td>{{lst.id}}</td>
+          <td>{{lst.name}}</td>  
+          <td>{{lst.price | currency:'BRL':true}}</td>
+          <td>{{lst.sku}}</td>
+          <td><button class="btn btn-danger" (click)="_registro.onDelete(lst);$event.stopPropagation();">Deletar</button></td>
+        </tr>  
+      </tbody>
+    </table>
+  </div>
