--- a/src/app/contatos-listagem/contatos-listagem.component.html
+++ b/src/app/contatos-listagem/contatos-listagem.component.html
@@ -1,7 +1,25 @@
-<h2>
-  <ul>  
-    <li *ngFor="let c of contatos">
-     {{c.id c.nome}}  
-    </li>
-  </ul>
-</h2>>
+<div style="margin: 20px">
+  <div>
+    Detalhes 
+
+
+  </div>
+
+  <pre>
+
+    Form valido: {{form.valid}}
+
+  </pre>
+  <pre>
+
+      Form valido: {{form.submitted}}
+  
+    </pre>
+    <pre>
+
+        Form valido: {{form.value | json}}
+    
+      </pre>
+      
+
+</div>
